# auto_accept

./: .gitignore  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  CLAUDE.md  INSTALL.md  LICENSE  README.md  build.sh  main.py  pyproject.toml
.github/: pull_request_template.md
.github/actions/build-executable/: action.yml
.github/workflows/: build-release.yml  lint.yml  release.yml  validate-pr-title.yml
src/: __init__.py
src/config/: __init__.py  constants.py
src/core/: __init__.py  browser.py  gmail.py  scanner.py
src/utils/: __init__.py  config_init.py  crypto.py  tracker.py  ui.py
